[project]
name = "mybrax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "brax>=0.12.1",
    "gymnasium>=1.1.1",
    "jax[cuda12]>=0.5.3",
    "matplotlib>=3.10.1",
    "mediapy>=1.2.2",
    "mujoco>=3.3.0",
    "mujoco-mjx>=3.3.0",
    "tqdm>=4.67.1",
]
